feat(SCRUM-383): endpoint local d'écriture sécurisé (création cocktail + upload image)
